--- a/edaNotebook.ipynb
+++ b/edaNotebook.ipynb
@@ -2,8 +2,277 @@
  "cells": [
   {
    "cell_type": "code",
+   "execution_count": 53,
+   "id": "d30d77c3",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "import seaborn as sns\n",
+    "import matplotlib.pyplot as plt\n",
+    "import time"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 141,
+   "id": "7c3aa973",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data = pd.read_excel('book2.xlsx', index_col=0)  \n",
+    "data = data.reset_index()\n",
+    "data = data.rename(columns={\"index\": \"team\"})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 142,
+   "id": "f64dde03",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>team</th>\n",
+       "      <th>3PM</th>\n",
+       "      <th>3PA</th>\n",
+       "      <th>3P%</th>\n",
+       "      <th>3P% share in Total Points</th>\n",
+       "      <th>Year</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>Atlanta Hawks</td>\n",
+       "      <td>8</td>\n",
+       "      <td>22.4</td>\n",
+       "      <td>36</td>\n",
+       "      <td>25.32</td>\n",
+       "      <td>1996-97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>Boston Celtics</td>\n",
+       "      <td>5.7</td>\n",
+       "      <td>16.2</td>\n",
+       "      <td>35.1</td>\n",
+       "      <td>16.99</td>\n",
+       "      <td>1996-97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>Brooklyn Nets</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>16.7</td>\n",
+       "      <td>35.3</td>\n",
+       "      <td>18.21</td>\n",
+       "      <td>1996-97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>3</th>\n",
+       "      <td>Chicago Bulls</td>\n",
+       "      <td>6.4</td>\n",
+       "      <td>17.1</td>\n",
+       "      <td>37.3</td>\n",
+       "      <td>18.63</td>\n",
+       "      <td>1996-97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>Cleveland Cavaliers</td>\n",
+       "      <td>5.9</td>\n",
+       "      <td>15.7</td>\n",
+       "      <td>37.6</td>\n",
+       "      <td>20.23</td>\n",
+       "      <td>1996-97</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>...</th>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "      <td>...</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>715</th>\n",
+       "      <td>Toronto Raptors</td>\n",
+       "      <td>13.8</td>\n",
+       "      <td>37</td>\n",
+       "      <td>37.4</td>\n",
+       "      <td>36.7</td>\n",
+       "      <td>2019-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>716</th>\n",
+       "      <td>Utah Jazz</td>\n",
+       "      <td>13.4</td>\n",
+       "      <td>35.2</td>\n",
+       "      <td>38</td>\n",
+       "      <td>36.1</td>\n",
+       "      <td>2019-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>717</th>\n",
+       "      <td>Washington Wizards</td>\n",
+       "      <td>12</td>\n",
+       "      <td>32.6</td>\n",
+       "      <td>36.8</td>\n",
+       "      <td>31.5</td>\n",
+       "      <td>2019-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>718</th>\n",
+       "      <td>Charolette Hornets</td>\n",
+       "      <td>13.1</td>\n",
+       "      <td>38.1</td>\n",
+       "      <td>34.3</td>\n",
+       "      <td>35.2</td>\n",
+       "      <td>2019-20</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>719</th>\n",
+       "      <td>New Orleans Pelicans</td>\n",
+       "      <td>13.6</td>\n",
+       "      <td>36.9</td>\n",
+       "      <td>37</td>\n",
+       "      <td>35.2</td>\n",
+       "      <td>2019-20</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>720 rows × 6 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "                     team   3PM   3PA   3P% 3P% share in Total Points     Year\n",
+       "0           Atlanta Hawks     8  22.4    36                     25.32  1996-97\n",
+       "1          Boston Celtics   5.7  16.2  35.1                     16.99  1996-97\n",
+       "2           Brooklyn Nets   5.9  16.7  35.3                     18.21  1996-97\n",
+       "3           Chicago Bulls   6.4  17.1  37.3                     18.63  1996-97\n",
+       "4     Cleveland Cavaliers   5.9  15.7  37.6                     20.23  1996-97\n",
+       "..                    ...   ...   ...   ...                       ...      ...\n",
+       "715       Toronto Raptors  13.8    37  37.4                      36.7  2019-20\n",
+       "716             Utah Jazz  13.4  35.2    38                      36.1  2019-20\n",
+       "717    Washington Wizards    12  32.6  36.8                      31.5  2019-20\n",
+       "718    Charolette Hornets  13.1  38.1  34.3                      35.2  2019-20\n",
+       "719  New Orleans Pelicans  13.6  36.9    37                      35.2  2019-20\n",
+       "\n",
+       "[720 rows x 6 columns]"
+      ]
+     },
+     "execution_count": 142,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 103,
+   "id": "aa92be99",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 123,
+   "id": "f332c6e9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 132,
+   "id": "48368562",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "\n",
+    "        \n",
+    "        \n",
+    "        \n",
+    "        "
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
-   "id": "2e46cddf",
+   "id": "e4affa9b",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 122,
+   "id": "9545feed",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "31cecdf9",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "83a63001",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "418163bd",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e8f0291e",
+   "metadata": {},
+   "outputs": [],
+   "source": []
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "a77389b7",
    "metadata": {},
    "outputs": [],
    "source": []
