adding final html file

--- a/edaNotebook.ipynb
+++ b/edaNotebook.ipynb
@@ -1,9 +1,36 @@
 {
  "cells": [
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Group Project: Initial Data Exploration\n",
+    "## Zaddeen Benaissa, Brenno Cardoso, Si Woo Park, Nicholas Tsung, Jack Wheeler"
+   ]
+  },
+  {
    "cell_type": "code",
    "execution_count": 1,
-   "metadata": {},
+   "metadata": {
+    "authors": [
+     {
+      "name": "Zaddeen Benaissa"
+     },
+     {
+      "name": "Brenno Cardoso"
+     },
+     {
+      "name": "Si Woo Park"
+     },
+     {
+      "name": "Nicholas Tsung"
+     },
+     {
+      "name": "Jack Wheeler"
+     }
+    ],
+    "title": "Group Project: Initial Data Exploration"
+   },
    "outputs": [],
    "source": [
     "import pandas as pd\n",
